--- a/shell/src/universal/doc/css/custom.css
+++ b/shell/src/universal/doc/css/custom.css
@@ -304,3 +304,8 @@ code {
   font-size: 12px;
   margin-left: 26px;
 }
+
+figure {
+  text-align: center;
+  margin: 10px auto; /* not needed unless you want centered */
+}
