enlarge 1.5x instead of 2

--- a/shell/src/universal/doc/css/custom.css
+++ b/shell/src/universal/doc/css/custom.css
@@ -356,6 +356,6 @@ p.toc-header {
 }
 
 .enlarge:hover {
-  transform: scale(2,2);
-  transform-origin: 50% 50%;;
+  transform: scale(1.5, 1.5);
+  transform-origin: 50% 50%;
 }
