--- a/shell/src/universal/doc/css/custom.css
+++ b/shell/src/universal/doc/css/custom.css
@@ -388,3 +388,19 @@ p.toc-header {
 #btnv .btn-arrow-left, #btnv .btn-next-text, .align-right, .modal-footer, .text-right, blockquote.pull-right p, blockquote.pull-right small {
   text-align: right
 }
+
+/*AM22 - To make google search box appear correct - START*/
+input.gsc-input, .gsc-input-box, .gsc-input-box-hover, .gsc-input-box-focus, .gsc-search-button
+{
+  box-sizing: content-box;
+  line-height: normal;
+}
+/*AM22 - To make google search box appear correct - END*/
+
+/*AM22 - To make google search results tabs appear correct - START*/
+.gsc-tabsArea div
+{
+  /*By default, Google custom search CSS sets it as AUTO, which shows scroll bars*/
+  overflow: visible;
+}
+/*AM22 - To make google search results tabs appear correct - END*/
