--- a/shell/src/universal/doc/css/custom.css
+++ b/shell/src/universal/doc/css/custom.css
@@ -81,7 +81,7 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
   display: block;
 }
 
-ul.nav li.dropdown:hover > ul.dropdown-menu > li > a {
+ul.nav > li.dropdown > ul.dropdown-menu > li > a {
   color: black;
 }
 
