--- a/web/_includes/layout.njk
+++ b/web/_includes/layout.njk
@@ -113,47 +113,49 @@
     <ul class="nav navbar-nav">
       <li><a href="quickstart.html">Quick Start</a></li>
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Guide <b class="caret"></b></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Overview <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="overview.html">Overview</a></li>
+          <li><a href="overview.html">Machine Learning</a></li>
           <li><a href="data.html">Data</a></li>
           <li><a href="visualization.html">Visualization</a></li>
-          <li class="divider"></li>
+        </ul>
+      </li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Supervised Learning <b class="caret"></b></a>
+        <ul class="dropdown-menu">
           <li><a href="classification.html">Classification</a></li>
           <li><a href="regression.html">Regression</a></li>
           <li><a href="feature.html">Features</a></li>
           <li><a href="validation.html">Model Validation</a></li>
           <li><a href="missing-value-imputation.html">Missing Value Imputation</a></li>
-          <li class="divider"></li>
+        </ul>
+      </li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unsupervised Learning <b class="caret"></b></a>
+        <ul class="dropdown-menu">
           <li><a href="clustering.html">Clustering</a></li>
           <li><a href="vector-quantization.html">Vector Quantization</a></li>
           <li><a href="association-rule.html">Association Rule Mining</a></li>
           <li><a href="mds.html">Multi-Dimensional Scaling</a></li>
           <li><a href="manifold.html">Manifold Learning</a></li>
-          <li class="divider"></li>
+        </ul>
+      </li>
+      <li><a href="nlp.html">NLP</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Math <b class="caret"></b></a>
+        <ul class="dropdown-menu">
           <li><a href="linear-algebra.html">Linear Algebra</a></li>
           <li><a href="statistics.html">Statistics</a></li>
           <li><a href="wavelet.html">Wavelet</a></li>
           <li><a href="interpolation.html">Interpolation</a></li>
           <li><a href="graph.html">Graph</a></li>
-          <li class="divider"></li>
-          <li><a href="nlp.html">Natural Language Processing</a></li>
         </ul>
       </li>
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">API Docs <b class="caret"></b>
-        </a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">API Docs <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="api/java/index.html">Java</a></li>
           <li><a href="api/scala/index.html">Scala</a></li>
-        </ul>
-      </li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Community <b class="caret"></b>
-        </a>
-        <ul class="dropdown-menu">
-          <li><a href="https://github.com/haifengl/smile/graphs/contributors">Project Contributors</a></li>
-          <li><a href="https://github.com/haifengl/smile/issues">Issue Tracker</a></li>
         </ul>
       </li>
       <li><a href="gallery.html">Gallery</a></li>
