--- a/web/_includes/layout.njk
+++ b/web/_includes/layout.njk
@@ -111,13 +111,15 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="navbar-collapse">
     <ul class="nav navbar-nav">
-      <li><a href="quickstart.html">Quick Start</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Overview <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="overview.html">Machine Learning</a></li>
+          <li><a href="quickstart.html">Quick Start</a></li>
+          <li><a href="overview.html">What's Machine Learning</a></li>
           <li><a href="data.html">Data</a></li>
           <li><a href="visualization.html">Visualization</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="faq.html">FAQ</a></li>
         </ul>
       </li>
       <li class="dropdown">
@@ -158,8 +160,6 @@
           <li><a href="api/scala/index.html">Scala</a></li>
         </ul>
       </li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="faq.html">FAQ</a></li>
     </ul>
   </div>
   <!-- /.navbar-collapse -->
