--- a/web/_includes/layout.njk
+++ b/web/_includes/layout.njk
@@ -160,6 +160,7 @@
           <li><a href="api/scala/index.html">Scala</a></li>
         </ul>
       </li>
+      <li><a href="https://mybinder.org/v2/gh/haifengl/smile/master?urlpath=lab%2Ftree%2Fnotebook%2Findex.ipynb">Notebook</a></li>
     </ul>
   </div>
   <!-- /.navbar-collapse -->
