--- a/web/_includes/layout.njk
+++ b/web/_includes/layout.njk
@@ -158,6 +158,8 @@
         <ul class="dropdown-menu">
           <li><a href="api/java/index.html">Java</a></li>
           <li><a href="api/scala/index.html">Scala</a></li>
+          <li><a href="api/json/index.html">JSON</a></li>
+          <li><a href="api/cas/index.html">CAS</a></li>
         </ul>
       </li>
       <li><a href="https://mybinder.org/v2/gh/haifengl/smile/notebook?urlpath=lab%2Ftree%2Fnotebook%2Findex.ipynb">Notebook</a></li>
