kotlin module/packages docs

--- a/web/_includes/layout.njk
+++ b/web/_includes/layout.njk
@@ -158,6 +158,7 @@
         <ul class="dropdown-menu">
           <li><a href="api/java/index.html">Java</a></li>
           <li><a href="api/scala/index.html">Scala</a></li>
+          <li><a href="api/kotlin/smile-kotlin/index.html">Kotlin</a></li>
           <li><a href="api/json/index.html">JSON</a></li>
           <li><a href="api/cas/index.html">CAS</a></li>
         </ul>
