clojure doc gen

--- a/web/_includes/layout.njk
+++ b/web/_includes/layout.njk
@@ -159,6 +159,7 @@
           <li><a href="api/java/index.html">Java</a></li>
           <li><a href="api/scala/index.html">Scala</a></li>
           <li><a href="api/kotlin/smile-kotlin/index.html">Kotlin</a></li>
+          <li><a href="api/clojure/index.html">Clojure</a></li>
           <li><a href="api/json/index.html">JSON</a></li>
           <li><a href="api/cas/index.html">CAS</a></li>
         </ul>
