--- a/web/_includes/layout.njk
+++ b/web/_includes/layout.njk
@@ -41,6 +41,11 @@
   <link rel="stylesheet" href="css/pager.css" type="text/css" />
   <link rel="stylesheet" href="css/toc.css" type="text/css" />
 
+  <!-- Vega-Lite Embed -->
+  <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+
   <!-- Google Analytics -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -61,7 +66,7 @@
   });
   </script>
 
-  <!-- Load static page by jQuery AJAX -->
+  <!-- Sidebar and testimonial-slider -->
   <script type="text/javascript">
     $(document).ready(function(){
       // scroll/follow sidebar
@@ -118,6 +123,7 @@
           <li><a href="overview.html">What's Machine Learning</a></li>
           <li><a href="data.html">Data</a></li>
           <li><a href="visualization.html">Visualization</a></li>
+          <li><a href="vegalite.html">Declarative Visualization</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="faq.html">FAQ</a></li>
         </ul>
