remove CAS doc link

--- a/web/_includes/layout.njk
+++ b/web/_includes/layout.njk
@@ -122,8 +122,8 @@
           <li><a href="quickstart.html">Quick Start</a></li>
           <li><a href="overview.html">What's Machine Learning</a></li>
           <li><a href="data.html">Data</a></li>
-          <li><a href="visualization.html">Visualization</a></li>
-          <li><a href="vegalite.html">Declarative Visualization</a></li>
+          <li><a href="visualization.html">Data Visualization</a></li>
+          <li><a href="vegalite.html">Declarative Data Visualization</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="faq.html">FAQ</a></li>
         </ul>
@@ -167,7 +167,6 @@
           <li><a href="api/kotlin/smile-kotlin/index.html">Kotlin</a></li>
           <li><a href="api/clojure/index.html">Clojure</a></li>
           <li><a href="api/json/index.html">JSON</a></li>
-          <li><a href="api/cas/index.html">CAS</a></li>
         </ul>
       </li>
       <li><a href="https://mybinder.org/v2/gh/haifengl/smile/notebook?urlpath=lab%2Ftree%2Fnotebook%2Findex.ipynb">Notebook</a></li>
