Notebook -> Try It Online

--- a/web/_includes/layout.njk
+++ b/web/_includes/layout.njk
@@ -123,7 +123,7 @@
           <li><a href="overview.html">What's Machine Learning</a></li>
           <li><a href="data.html">Data</a></li>
           <li><a href="visualization.html">Data Visualization</a></li>
-          <li><a href="vegalite.html">Declarative Data Visualization</a></li>
+          <li><a href="vegalite.html">Declarative Visualization</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="faq.html">FAQ</a></li>
         </ul>
@@ -169,7 +169,7 @@
           <li><a href="api/json/index.html">JSON</a></li>
         </ul>
       </li>
-      <li><a href="https://mybinder.org/v2/gh/haifengl/smile/notebook?urlpath=lab%2Ftree%2Fnotebook%2Findex.ipynb">Notebook</a></li>
+      <li><a href="https://mybinder.org/v2/gh/haifengl/smile/notebook?urlpath=lab%2Ftree%2Fnotebook%2Findex.ipynb">Try It Online</a></li>
     </ul>
   </div>
   <!-- /.navbar-collapse -->
