--- a/web/_includes/layout.njk
+++ b/web/_includes/layout.njk
@@ -160,7 +160,7 @@
         </ul>
       </li>
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">API Docs <b class="caret"></b></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">API <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="api/java/index.html">Java</a></li>
           <li><a href="api/scala/index.html">Scala</a></li>
