move notebook to shell/src/universal/notebooks

--- a/web/_includes/layout.njk
+++ b/web/_includes/layout.njk
@@ -169,7 +169,7 @@
           <li><a href="api/json/index.html">JSON</a></li>
         </ul>
       </li>
-      <li><a href="https://mybinder.org/v2/gh/haifengl/smile/notebook?urlpath=lab%2Ftree%2Fnotebook%2Findex.ipynb">Try It Online</a></li>
+      <li><a href="https://mybinder.org/v2/gh/haifengl/smile/notebook?urlpath=lab%2Ftree%2Fshell%2Fsrc%2Funiversal%2Fnotebooks%2Findex.ipynb">Try It Online</a></li>
     </ul>
   </div>
   <!-- /.navbar-collapse -->
