--- a/web/_includes/layout.njk
+++ b/web/_includes/layout.njk
@@ -72,7 +72,7 @@
       // scroll/follow sidebar
       // #sidebar is defined in the content snippet
       // This script has to be executed after the snippet loaded.
-      $.getScript("js/follow-sidebar.js");
+      // $.getScript("js/follow-sidebar.js");
 
       $("#testimonial-slider").owlCarousel({
         items: 1,
