update kotlin api doc link

--- a/web/_includes/layout.njk
+++ b/web/_includes/layout.njk
@@ -164,7 +164,7 @@
         <ul class="dropdown-menu">
           <li><a href="api/java/index.html">Java</a></li>
           <li><a href="api/scala/index.html">Scala</a></li>
-          <li><a href="api/kotlin/smile-kotlin/index.html">Kotlin</a></li>
+          <li><a href="api/kotlin/index.html">Kotlin</a></li>
           <li><a href="api/clojure/index.html">Clojure</a></li>
           <li><a href="api/json/index.html">JSON</a></li>
         </ul>
