open api doc in new tab

--- a/web/_includes/layout.njk
+++ b/web/_includes/layout.njk
@@ -162,14 +162,14 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">API <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="api/java/index.html">Java</a></li>
-          <li><a href="api/scala/index.html">Scala</a></li>
-          <li><a href="api/kotlin/index.html">Kotlin</a></li>
-          <li><a href="api/clojure/index.html">Clojure</a></li>
-          <li><a href="api/json/index.html">JSON</a></li>
+          <li><a href="api/java/index.html" target="_blank">Java</a></li>
+          <li><a href="api/scala/index.html" target="_blank">Scala</a></li>
+          <li><a href="api/kotlin/index.html" target="_blank">Kotlin</a></li>
+          <li><a href="api/clojure/index.html" target="_blank">Clojure</a></li>
+          <li><a href="api/json/index.html" target="_blank">JSON</a></li>
         </ul>
       </li>
-      <li><a href="https://mybinder.org/v2/gh/haifengl/smile/notebook?urlpath=lab%2Ftree%2Fshell%2Fsrc%2Funiversal%2Fnotebooks%2Findex.ipynb">Try It Online</a></li>
+      <li><a href="https://mybinder.org/v2/gh/haifengl/smile/notebook?urlpath=lab%2Ftree%2Fshell%2Fsrc%2Funiversal%2Fnotebooks%2Findex.ipynb" target="_blank">Try It Online</a></li>
     </ul>
   </div>
   <!-- /.navbar-collapse -->
