--- a/chat/src/chat/MessageInput.css
+++ b/chat/src/chat/MessageInput.css
@@ -7,7 +7,7 @@
 }
 
 .input-form {
-  background-color:#f3f4f6;
+  background-color: #f3f4f6;
   padding-top: 8px;
   padding-bottom: 8px;
   border-bottom-right-radius: 16px;
@@ -39,7 +39,6 @@
 }
 
 .input-element-container {
-  padding: 8px;
   padding-left: 16px;
   padding-right: 16px;
   width:100%;
@@ -54,6 +53,7 @@
   overflow: scroll;
 
   color: rgba(0,0,0,.87);
+  background-color: transparent;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
   text-align: left;
@@ -83,7 +83,7 @@
   cursor: pointer;
   display: flex;
   align-items: end;
-  opacity: 1;
+  opacity: 0.4;
   height: 100%;
   padding-top: 8px;
   padding-bottom: 8px;
@@ -94,7 +94,7 @@
   padding: 12px;
 }
 
-.placeholder {
+.message-placeholder {
   color: #9ca3af;
   position: absolute;
   left: 0;
