--- a/chat/src/chat/Message.css
+++ b/chat/src/chat/Message.css
@@ -49,6 +49,7 @@
   width: 100%;
   height: 100%;
   background-color: rgb(220, 248, 198);
+  opacity: 0.5;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   border-bottom-left-radius: 8px;
