--- a/chat/src/chat/Message.css
+++ b/chat/src/chat/Message.css
@@ -92,8 +92,8 @@
 .name {
   text-align: left;
   vertical-align: text-top;
-  font-size: 20px;
-  align-self: flex-start;
+  font-size: 14px;
+  align-self: center;
   line-height: auto;
   color: #4b5563;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
