--- a/chat/src/chat/MessageInput.css
+++ b/chat/src/chat/MessageInput.css
@@ -16,7 +16,7 @@
   position: relative;
   width: 100%;
   display: flex;
-  align-items: end;
+  align-items: center;
   box-sizing: border-box;
 }
 
@@ -82,7 +82,7 @@
   padding-right: 16px;
   cursor: pointer;
   display: flex;
-  align-items: end;
+  align-items: center;
   opacity: 0.4;
   height: 100%;
   padding-top: 8px;
