--- a/chat/src/App.css
+++ b/chat/src/App.css
@@ -1,6 +1,7 @@
 #root {
-  max-width: 1280px;
+  max-width: 600px;
   height: 100vh;
+  overflow: hidden;
   margin: 0 auto;
   padding: 0;
   text-align: center;
