--- a/chat/src/App.css
+++ b/chat/src/App.css
@@ -1,8 +1,8 @@
 #root {
   width: 800px;
-  max-width: calc(100% - 20px);
+  max-width: 100%;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0;
 
   height: 100vh;
   /* mobile viewport bug fix */
