customize page titles

--- a/web/src/_includes/layout.njk
+++ b/web/src/_includes/layout.njk
@@ -5,11 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>
-     Smile - Statistical Machine Intelligence and Learning Engine
-  </title>
+  <title>{{ title }}</title>
   
-  <meta name="description" content="Smile is a fast and general machine learning engine for big data processing, with built-in modules for classification, regression, clustering, association rule mining, feature selection, manifold learning, genetic algorithm, missing value imputation, efficient nearest neighbor search, MDS, NLP, linear algebra, hypothesis tests, random number generators, interpolation, wavelet, plot, etc.">
+  <meta name="description" content="Statistical Machine Intelligence and Learning Engine">
 
   <!-- prettify js and CSS -->
   <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?lang=scala&lang=kotlin&lang=clj"></script>
@@ -105,7 +103,7 @@
         <ul class="dropdown-menu">
           <li><a href="quickstart.html">Quick Start</a></li>
           <li><a href="overview.html">What's Machine Learning</a></li>
-          <li><a href="data.html">Data</a></li>
+          <li><a href="data.html">Data Processing</a></li>
           <li><a href="visualization.html">Data Visualization</a></li>
           <li><a href="vegalite.html">Declarative Visualization</a></li>
           <li><a href="gallery.html">Gallery</a></li>
@@ -117,7 +115,7 @@
         <ul class="dropdown-menu">
           <li><a href="classification.html">Classification</a></li>
           <li><a href="regression.html">Regression</a></li>
-          <li><a href="feature.html">Features</a></li>
+          <li><a href="feature.html">Feature Engineering</a></li>
           <li><a href="validation.html">Model Validation</a></li>
           <li><a href="missing-value-imputation.html">Missing Value Imputation</a></li>
         </ul>
