margin between icon and tagline

--- a/web/src/_includes/layout.njk
+++ b/web/src/_includes/layout.njk
@@ -78,7 +78,7 @@
 <div class="masthead">
   <p class="lead">
     <a href="index.html">
-    <img src="images/smile.jpg" style="height:100px; width:auto; vertical-align: bottom; margin-top: 20px;">
+    <img src="images/smile.jpg" style="height:100px; width:auto; vertical-align: bottom; margin-top: 20px; margin-right: 20px;">
     <span class="tagline">Smile - Statistical Machine Intelligence and Learning Engine</span>
     </a>
   </p>
