revise title to 'Graph Data Structure'

--- a/web/src/_includes/layout.njk
+++ b/web/src/_includes/layout.njk
@@ -138,7 +138,7 @@
           <li><a href="statistics.html">Statistics</a></li>
           <li><a href="wavelet.html">Wavelet</a></li>
           <li><a href="interpolation.html">Interpolation</a></li>
-          <li><a href="graph.html">Graph</a></li>
+          <li><a href="graph.html">Graph Data Structure</a></li>
         </ul>
       </li>
       <li class="dropdown">
