customize tab-content

--- a/web/src/css/custom.css
+++ b/web/src/css/custom.css
@@ -527,3 +527,19 @@ h1 {
   border-bottom: 2px solid #CCC;
   padding-bottom: 10px
 }
+
+/* The following ensures tabs to have same height. */
+.tab-content {
+  display: flex;
+}
+
+.tab-content > .tab-pane {
+  display: block; /* undo "display: none;" */
+  visibility: hidden;
+  margin-right: -100%;
+  width: 100%;
+}
+
+.tab-content > .active {
+  visibility: visible;
+}
