--- a/web/src/_includes/layout.njk
+++ b/web/src/_includes/layout.njk
@@ -173,7 +173,7 @@
 </div>
 </div>
 
-<a href=https://github.com/haifengl/smile><img style="position: fixed; top: 0; right: 0; border: 0" src=https://github.blog/wp-content/uploads/2008/12/forkme_right_orange_ff7600.png alt="Fork me on GitHub"></a>
+<a href=https://github.com/haifengl/smile><img style="position: fixed; top: 0; right: 0; border: 0" src=/images/forkme_right_orange.png alt="Fork me on GitHub"></a>
 
 <!-- Place this tag right after the last button or just before your close body tag. -->
 <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
